--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "react-toastify": "^11.0.2",
     "react-tooltip": "^5.28.0",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.15.10"
