--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "match-sorter": "^8.0.0",
     "motion": "^11.15.0",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^11.0.2",
     "react-tooltip": "^5.28.0",
     "sort-by": "^0.0.2",
-    "sweetalert2": "^11.15.10"
+    "sweetalert2": "^11.15.10",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
