--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^8.0.0",
