--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.2",
     "react-tooltip": "^5.28.0",
     "sort-by": "^0.0.2",
@@ -38,7 +39,7 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.22",
+    "daisyui": "^4.12.23",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
