--- a/package.json
+++ b/package.json
@@ -14,25 +14,32 @@
     "@stripe/react-stripe-js": "^3.1.1",
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
+    "file-saver": "^2.0.5",
     "firebase": "^11.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^8.0.0",
     "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.3.1",
+    "react-csv": "^2.2.2",
+    "react-data-table-component": "^7.6.2",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-spinners": "^0.15.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^11.0.2",
     "react-tooltip": "^5.28.0",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.15.10",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
