--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-spinners": "^0.15.0",
     "react-table": "^7.8.0",
     "react-toastify": "^11.0.2",
+    "react-toggle": "^4.1.3",
     "react-tooltip": "^5.28.0",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.15.10",
