--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.0",
+    "@mui/material": "^6.4.1",
     "@stripe/react-stripe-js": "^3.1.1",
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
@@ -38,6 +41,7 @@
     "react-toggle": "^4.1.3",
     "react-tooltip": "^5.28.0",
     "sort-by": "^0.0.2",
+    "styled-components": "^6.1.14",
     "sweetalert2": "^11.15.10",
     "swiper": "^11.2.1",
     "xlsx": "^0.18.5"
