--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-data-table-component": "^7.6.2",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
