--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.0",
     "@mui/material": "^6.4.1",
+    "@shadcn/ui": "^0.0.4",
     "@stripe/react-stripe-js": "^3.1.1",
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
@@ -24,6 +25,7 @@
     "jspdf-autotable": "^3.8.4",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.474.0",
     "match-sorter": "^8.0.0",
     "motion": "^11.18.2",
     "react": "^18.3.1",
